icon fixes, title spacing

--- a/quartz/styles/custom.scss
+++ b/quartz/styles/custom.scss
@@ -121,7 +121,7 @@
     margin: 2rem 0 0;
     margin-top: var(--space-2xl);
     font-family: salter;
-    line-height: 1.2;
+    line-height: 1.1;
     font-weight: 100;
     text-align: center;
 }
@@ -236,7 +236,7 @@ blockquote {
     --color: var(--secondary);
     --border: transparent;
     --bg: var(--light);
-    --callout-icon-awe: url('data:image/svg+xml; utf8, <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="lucide lucide-cross"><path d="M11 2a2 2 0 0 0-2 2v5H4a2 2 0 0 0-2 2v2c0 1.1.9 2 2 2h5v5c0 1.1.9 2 2 2h2a2 2 0 0 0 2-2v-5h5a2 2 0 0 0 2-2v-2a2 2 0 0 0-2-2h-5V4a2 2 0 0 0-2-2h-2z"/></svg>');
+    --callout-icon-forgiveness: url('data:image/svg+xml; utf8, <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="lucide lucide-cross"><path d="M11 2a2 2 0 0 0-2 2v5H4a2 2 0 0 0-2 2v2c0 1.1.9 2 2 2h5v5c0 1.1.9 2 2 2h2a2 2 0 0 0 2-2v-5h5a2 2 0 0 0 2-2v-2a2 2 0 0 0-2-2h-5V4a2 2 0 0 0-2-2h-2z"/></svg>');
   }
 }
 
